syntax = "proto3";

option go_package = "./internal/service";

service LightEvent {
	// Ping allows clients to ask the server about the authenticated user or API key.
	rpc Ping(PingOptions) returns (PingResult);

	// Events
	rpc ListEvents(ListEventsOptions) returns (EventList);
	rpc ListEventDates(ListEventDatesOptions) returns (EventDateList);
	rpc GetEvent(ByName) returns (Event);
	rpc CreateEvent(Event) returns (Event);
	rpc UpdateEvent(Event) returns (Event);
	rpc CancelEventDate(CancelEventDateOptions) returns (EventDate);

	// Registrations
	rpc ListEventRegistrations(ListEventRegistrationsOptions) returns (RegistrationList);
	rpc GetRegistration(ByConfCode) returns (Registration);
	rpc CreateRegistration(WriteableRegistration) returns (Registration);
	rpc DeleteRegistration(DeleteRegistrationOptions) returns (Result);

	// Members
	rpc CreateMember(WriteableMember) returns (Member);
	rpc ListMembers(ListMembersOptions) returns (MemberList);
	rpc GetMember(GetMemberOptions) returns (Member);
	rpc UpdateMember(WriteableMember) returns (Member);
	rpc ListMemberRegistrations(ListMemberRegistrationsOptions) returns (MemberRegistrationList);

	// Users
	rpc CreateUser(WriteableUser) returns (User);
	rpc UpdateUser(WriteableUser) returns (User);
	rpc ListUsers(ListUsersOptions) returns (UserList);

	// Sessions
	rpc ListSessions(ListSessionsOptions) returns (SessionList);

	// API Keys
	rpc CreateAPIKey(WriteableAPIKey) returns (APIKeyWithSecret);

	// Settings
	rpc ListSettings(ListSettingsOptions) returns (SettingsList);
	rpc UpdateSettings(UpdateSettingsOptions) returns (SettingsList);

	rpc BeginVerification(BeginVerificationOptions) returns (BeginVerificationResult);
	rpc CompleteVerification(CompleteVerificationOptions) returns (CompleteVerificationResult);
	rpc Register(RegisterOptions) returns (Registration);
}

message Result {
	string message = 1;
}

message PingOptions {}
message PingResult {
	string sub = 1;
}

message ListEventsOptions {
	optional bool hidden = 1;
	optional bool closed = 2;
}

message ByName {
	string name = 1;
}

message ByConfCode {
	string conf_code = 1;
}

message EventList {
	repeated Event events = 1;
}

message Event {
	string name = 1;
	string title = 2;
	bool hidden = 3;
	bool closed = 4;
	repeated EventDate dates = 5;
	string description = 6;
}

message EventDate {
	string uid = 1;
	string value = 2;
	bool cancelled = 3;
}

message ListEventDatesOptions {
	int32 count = 1;
}

message EventDateList {
	repeated EventDateSummary event_dates = 1;
}

message EventDateSummary {
	EventDate event_date = 1;
	Event event = 2;
	repeated Registration registrations = 3;
}

message CancelEventDateOptions {
	string event_date_uid = 2;
}

message ListEventRegistrationsOptions {
	string event_name = 1;
}

message RegistrationList {
	repeated Registration registrations = 1;
}

message MemberRegistrationList {
	repeated MemberRegistration registrations = 1;
}

message ListMemberRegistrationsOptions {
	string member_email = 1;
}

enum RegistrationKind {
	REG_ONCE = 0;
	REG_SERIES = 1;
}

message Registration {
	string conf_code = 1;
	RegistrationKind kind = 2;
	string event_name = 3;
	optional EventDate event_date = 4;
	Member member = 5;
	string created_at = 6;
}

message MemberRegistration {
	string conf_code = 1;
	RegistrationKind kind = 2;
	string event_name = 3;
	optional EventDate event_date = 4;
	string created_at = 5;
}

message WriteableRegistration {
	RegistrationKind kind = 1;
	string event_name = 2;
	optional string event_date_uid = 3;
	string member_email = 4;
}

message DeleteRegistrationOptions {
	string conf_code = 2;
}

message RegisterOptions {
	RegistrationKind kind = 1;
	string event_name = 2;
	optional string event_date_uid = 3;
	string member_first_name = 4;
	string member_last_name = 5;
}

message ListSettingsOptions {}
message UpdateSettingsOptions {
	string settings = 1;
}

message SettingsList {
	string settings = 1;
}

message ListSessionsOptions {}

message SessionList {
	repeated Session sessions = 1;
}

message Session {
	string key = 1;
	string subject = 2;
	string kind = 3;
	string created_at = 4;
}

message User {
	string uid = 1;
	string username = 2;
	string first_name = 3;
	string last_name = 4;
	string created_at = 5;
	string updated_at = 6;
	string email = 7;
}

message WriteableUser {
	string uid = 1;
	string username = 2;
	string password = 3;
	optional string first_name = 4;
	optional string last_name = 5;
	optional string email = 6;
}

message ListUsersOptions {}

message UserList {
	repeated User users = 1;
}

message WriteableAPIKey {
	string name = 1;
}

message APIKeyWithSecret {
	string name = 1;
	string secret = 2;
	string created_at = 3;
}

message BeginVerificationOptions {
	string email = 1;
}

message BeginVerificationResult {
	string key = 1;
}

message CompleteVerificationOptions {
	string key = 1;
	string challenge = 2;
}

message CompleteVerificationResult {}

message ListMembersOptions {
	optional string search = 1;
}

message MemberList {
	repeated Member members = 1;
}

message Member {
	string email = 1;
	string first_name = 2;
	string last_name = 3;
	bool verified = 4;
	string created_at = 5;
}

message WriteableMember {
	string email = 1;
	string first_name = 2;
	string last_name = 3;
}

message GetMemberOptions {
	string email = 1;
}
